cmake_minimum_required(VERSION 3.20.0)
project(monaco LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(monaco main.cpp)
target_include_directories(monaco PRIVATE ${CMAKE_SOURCE_DIR})
target_compile_options(monaco PRIVATE -Wall)
target_compile_options(monaco PRIVATE -Wcast-align)
#target_compile_options(monaco PRIVATE -Wconversion)
target_compile_options(monaco PRIVATE -Werror)
target_compile_options(monaco PRIVATE -Wextra)
target_compile_options(monaco PRIVATE -Wfloat-equal)
message("CXX_FLAGS: ${CXX_FLAGS}")
