cmake_minimum_required(VERSION 3.20.0)
project(monaco LANGUAGES CUDA)
set(CUB_DIR "$ENV{CUDA_HOME}/include/cub/cmake")
set(Thrust_DIR "$ENV{CUDA_HOME}/include/thrust/cmake")
add_executable(monaco main.cu)
find_package(Thrust REQUIRED CONFIG)
thrust_create_target(Thrust)
target_link_libraries(monaco Thrust)
